welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:13: error: value &&! is not a member of Boolean
	while(!estSurBiscuit() &&!estFaceMur){
                               ^Balin:21: error: not found: value droitr
droitr()
^