welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
gauche()
gauche() //intitialisation
while(!estFaceMur()){
	
	while(!estSurBiscuit() && !estFaceMur()){
		avance()
	
	prendBiscuit()
	recule()
	}

	while(!estSurBiscuit() &&!estFaceMur){
		recule()
	}
	avance()
	poseBiscuit()
	avance()
		
}
droitr()
avance()
gauche()
avance()

